--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,26 +1,38 @@
 <h6>DashBoard</h6>
 <h3>Welcome {{name}}</h3>
 {{#if stories}}
-    <p>Here are your stories</p>
-    <table class="striped">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Created</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each stories}}
-                <tr>
-                    <td><a href="/stories/{{_id}}"></a>{{title}}</td>
-                    <td>{{formatDate createdAt}}</td>
-                    <td><spa class="dash-status">{{status}}</spa></td>
-                    <td></td>
-                </tr>
-            {{/each}}
-        </tbody>
-    </table>
+<p>Here are your stories</p>
+<table class="striped">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Created</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each stories}}
+        <tr>
+            <td><a href="/stories/{{_id}}">{{title}}</a></td>
+            <td>{{formatDate createdAt}}</td>
+            <td>
+                <spa class="dash-status">{{status}}</spa>
+            </td>
+            <td>
+                <a href="/stories/edit/{{_id}}" class="btn btn-float">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <form action="/stories/{{_id}}" method="POST" id="delete-form">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <button type="submit" class="btn red">
+                        <i class="fas fa-trash"></i>
+                    </button>
+                </form>
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</table>
 {{else}}
-    <p>You have not created any stories</p>
+<p>You have not created any stories</p>
 {{/if}}
